# Parallel-Mandlebrot-set

./: CMakeLists.txt  Mandlebrot.cpp  Mandlebrot.h  README.md
